<resources>
    <string name="app_name">StudentLife</string>
    <string name="matkul_sample">📖 Pemrograman Aplikasi Mobile</string>
    <string name="jadwal_sample">Hari Kuliah: Senin   Jam Kuliah: 19.00</string>
    <string name="title_main">Daftar Jadwal Kuliah</string>
    <string name="add_new_task">Add New Task</string>
    <string name="title_task_text">Daftar Tugas</string>
    <string name="subtitle_task_text">List seluruh tugas kuliah kamu.</string>
    <string name="find_task">Find Task</string>
    <string name="find_task_text">Cari tugas kamu…</string>
    <string name="task_example_text">📕 Tugas Proyek Pemrograman Mobile</string>
    <string name="deadline_example_text">Deadline:&#160;</string>
    <string name="date_example_text">Senin, 18 April 2025 19.30</string>
    <string name="back">Back</string>
    <string name="add_new_task_text">Tambah Tugas Kuliah</string>
    <string name="deadline_text">Deadline</string>
    <string name="add_task_description_hint">Masukkan deskripsi tugas</string>
    <string name="task_description_text">Deskripsi Tugas</string>
    <string name="choose_date_text">Pilih tenggat</string>
    <string name="coffee_greeting_icon">Greeting Icon</string>
    <string name="halo_user_text">Halo, User 👋</string>
    <string name="add_more_task_text">Tambahkan data tugas di bawah, ya!</string>
    <string name="task_name">Nama Tugas</string>
    <string name="calendar_icon">Calendar Icon</string>
    <string name="document_icon">Document Icon</string>
    <string name="add_task_name_hint">Masukkan nama tugas</string>
    <string name="save_text">Pratinjau</string>
    <string name="ic_drop_down">Dropdown Icon</string>
    <string name="success_add_task">Check ulang sebelum menyimpan data, ya!</string>
    <string name="task_detail">Detail Tugas</string>
    <string name="ic_success">Success Icon</string>
    <string name="example_task_title">Tugas Proyek Pemrograman Mobile</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_non_amet_pretium_nisl_ut_ullamcorper_duis_purus_mauris_ac_nec_sagittis_dictum_sit_eu_fringilla_faucibus_tellus_facilisi_vitae_arcu_morbi_cras_felis_iaculis_ipsum_vulputate_viverra_proin_enim_sem_in_risus">Lorem ipsum dolor sit amet consectetur. Non amet pretium nisl ut ullamcorper duis purus mauris. Ac nec sagittis dictum sit. Eu fringilla faucibus tellus facilisi vitae arcu morbi cras. Felis iaculis ipsum vulputate viverra proin enim sem in risus.</string>
    <string name="deskripsi_tugas">Deskripsi Tugas</string>
    <string name="senin_19_00">Senin, 19.00</string>
    <string name="deadline">Deadline</string>
    <string name="simpan">Simpan</string>
    <string name="unggah_file_disini">Unggah file <b><u>di sini</u></b> </string>
    <string name="default_web_client_id">893845552612-clf1r9lle56i3hqe9n47tncc2citc45v.apps.googleusercontent.com</string>

</resources>