<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <RelativeLayout
            android:id="@+id/headerContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:id="@+id/headerLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="vertical"
                tools:ignore="RelativeOverlap">

                <TextView
                    android:id="@+id/headerTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_task_text"
                    android:textColor="#101828"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/headerSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle_task_text"
                    android:textSize="14sp"
                    android:textColor="#6D6E8C"
                    android:maxLines="1"
                    android:ellipsize="end" />
            </LinearLayout>

            <ImageView
                android:id="@+id/btn_add"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_add"
                android:clickable="true"
                android:contentDescription="@string/add_new_task"
                android:focusable="true" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/search_box"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_search_box"
            android:padding="12dp"
            android:gravity="center_vertical"
            android:layout_below="@id/headerContainer"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/find_task"
                android:src="@drawable/ic_search"
                app:tint="#7A7A7A" />

             <EditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@null"
                android:fontFamily="sans-serif"
                android:hint="@string/find_task_text"
                android:inputType="text"
                android:textColor="#000000"
                android:textColorHint="#6D6E8C"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/search_box"
            android:layout_marginTop="24dp"
            tools:listitem="@layout/task_item_card"/>

    </RelativeLayout>
</ScrollView>
